--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -13,15 +13,11 @@ $color-blue: #6bbedf;
   box-sizing: border-box;
 }
 
-html {
-  background-image: linear-gradient(10deg, #10333b38, #ffffff);
-}
 
 body {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
   font-family: roboto;
   min-height: 100vh;
   padding-top: 3%;
+  color: white;
+  background-image: linear-gradient(10deg, #236a7ac2, #e7a3a381);
 }
