--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,65 +1,38 @@
-#form {
-  margin: 0 1rem;
-  min-height: 10vh;
-  width: 100%;
-}
-
-form {
-  display: flex;
-  font-size: 1.7rem;
-  justify-content: center;
-  margin: 15px 0;
-  padding: 0.8rem;
-  width: 100%;
-}
-
 form input {
       padding: 20px;
-      font-size: 17px;
+      font-size: 22px;
+      max-width: 500px;
+      width: 100%;
       border: none;
       outline: none;
-      /* border-radius: 15; */
       border-top-left-radius: 15px;
       border-bottom-left-radius: 15px;
-      max-width: 500px;
-      transition: background-color 200ms ease-in-out;
-      width: 100%;
       background-color: rgb(255, 255, 255);
+      transition: all .2s ease;
 }
 
 form button {
         padding: 20px;
-        font-size: 17px;
+        font-size: 22px;
+        border: none;
+        outline: none;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
-        min-width: 100px;
-        
-}
-
-button {
-	border: none;
-    outline: none;
-    background-color: rgb(255, 255, 255);
-}
-
-button:hover {
+        background-color: rgb(255, 255, 255);
+        transition: all .2s ease;
+    }
+    
+form button:hover {
   cursor: pointer;
-  background-color: #10333b38
+  background-color: rgba(255, 255, 255, 0.212);
 }
-
-@media only screen and (max-width: 400px) {
-    form {
-        align-items: center;
-        flex-direction: column;
-    }
-
-    form input {
-        border-radius: 17px;
-    }
-
-    form button {
-        border-radius: 15px;
-        margin-top: 15px;
-        width: 50%;
-    }
+button {
+    padding: 20px;
+    font-size: 22px;
+    border: none;
+    outline: none;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: rgb(255, 255, 255);
+    transition: all .2s ease;
 }
