--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://css.gg/css?=|check');
+@import url('https://css.gg/trash.css');
+@import url('https://css.gg/math-plus.css');
 
 // colors
 
@@ -17,7 +20,24 @@ $color-blue: #6bbedf;
 body {
   font-family: roboto;
   min-height: 100vh;
-  padding-top: 3%;
   color: white;
-  background-image: linear-gradient(10deg, #236a7ac2, #e7a3a381);
+  background-image: linear-gradient(10deg, #236a7a, #fab1b1cb);
+}
+
+header {
+    font-size: 2rem;
+}
+
+h1 {
+    white-space: pre;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    overflow: hidden;  
+}
+
+header, form {
+    min-height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
