--- a/src/scss/_tasks.scss
+++ b/src/scss/_tasks.scss
@@ -1,3 +1,5 @@
+
+// task list
 .task-container {
     display: flex;
     justify-content: center;
@@ -5,25 +7,67 @@
 }
 
 .task-list {
-    min-width: 30%;
+    max-width: 1200px;
+    min-width: 550px;
     list-style: none;
 }
 
 .task {
+    margin: 1rem;
     padding: 10px;
     font-size: 20px;
-    color: rgba(0, 0, 0, 0.726);
+    color: rgba(0, 0, 0, 0.575);
     display: flex;
     justify-content: space-between;
     align-items: center;
     border: none;
     outline: none;
-    background-color: rgba(255, 255, 255, 0.212);
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.178);
     transition: all .455s ease;
   }
 
 .task li {
     flex: 1;
 }
+
+.task-item {
+    padding: 0rem 0.5rem;
+  }
+  
+
+// task buttons
+.trash-btn,
+.check-btn {
+  background: transparent;
+  color: rgb(255, 255, 255);
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem 0.5rem;
+  margin: 0 5px;
+}
+
+// button icons
+.gg-trash,          
+.gg-check {
+  pointer-events: none;
+}
+
+.gg-check {
+    --ggs: 1.5;
+    margin-top: 2px;
+}
+
+// task actions
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+    transform: scale(0.5);
+    margin: -1.6rem;
+  }
+
+.fall {
+    transform: translateY(20rem) rotateZ(10deg);
+    opacity: 0;
+  }
+
+  
