--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -17,15 +17,16 @@ $color-blue: #6bbedf;
 }
 
 
+
 body {
   font-family: roboto;
   min-height: 100vh;
   color: white;
-  background-image: linear-gradient(10deg, #236a7a, #fab1b1cb);
+  background-image: linear-gradient(10deg, #0f7086, #f57f7fa1);
 }
 
 header {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 h1 {
@@ -41,3 +42,40 @@ header, form {
     justify-content: center;
     align-items: center;
 }
+
+
+
+@media only screen and (max-width: 400px) {
+
+    form {
+        justify-content: center;
+        align-items: center;
+    }
+
+    form input {
+        padding: 2rem;
+
+    }
+    form button {
+       width: 30%;
+       
+    
+        }
+}
+
+@media only screen and (max-width: 400px) {
+    header {
+        font-size: 1.5rem;
+    }
+    h1 {
+        margin-bottom: -1rem;
+
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    header {
+        font-size: 2rem;
+    }
+}
+
