--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,3 +1,4 @@
+
 form input {
       padding: 20px;
       font-size: 22px;
@@ -5,6 +6,7 @@ form input {
       width: 100%;
       border: none;
       outline: none;
+      border-radius: 0;
       border-top-left-radius: 15px;
       border-bottom-left-radius: 15px;
       background-color: rgb(255, 255, 255);
@@ -12,7 +14,8 @@ form input {
 }
 
 form button {
-        padding: 33px;
+        padding: 20px;
+        font-size: 22px;
         border: none;
         outline: none;
         border-top-right-radius: 15px;
@@ -26,7 +29,13 @@ form button:hover {
   background-color: rgba(255, 255, 255, 0.397);
 }
 
+
+
 .gg-math-plus {
-    --ggs: 1.5;
+   --ggs: 1.3;
+    display: inline-block;
+    
     color: rgba(173, 108, 108, 0.795);
+    vertical-align: middle;
+
 }
