--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 @import url('https://css.gg/css?=|check');
 @import url('https://css.gg/trash.css');
 @import url('https://css.gg/math-plus.css');
@@ -17,7 +18,6 @@ $color-blue: #6bbedf;
 }
 
 
-
 body {
   font-family: roboto;
   min-height: 100vh;
@@ -27,6 +27,7 @@ body {
 
 header {
     font-size: 2.5rem;
+    font-family: 'Paytone One', sans-serif;
 }
 
 h1 {
