--- a/src/scss/_tasks.scss
+++ b/src/scss/_tasks.scss
@@ -16,6 +16,8 @@
     margin: 1rem;
     padding: 10px;
     font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     color: rgba(0, 0, 0, 0.575);
     display: flex;
     justify-content: space-between;
