--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -22,18 +22,18 @@ body {
   font-family: roboto;
   min-height: 100vh;
   color: white;
-  background-image: linear-gradient(10deg, #0f7086, #f57f7fa1);
+  background-image: linear-gradient(10deg, #0e687c, #a01f1fb4);
 }
 
 header {
-    font-size: 2.5rem;
+    font-size: 3.0rem;
     font-family: 'Paytone One', sans-serif;
 }
 
 h1 {
     white-space: pre;
-    margin-top: 50px;
-    margin-bottom: 20px;
+    margin-top: 80px;
+    margin-bottom: 1px;
     overflow: hidden;  
 }
 
