--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,3 +1,11 @@
+.inputContainer {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.747);
+    border-radius: 15px;
+    //box-shadow: 0px 40px 65px -5px rgba(0, 0, 0, 0.137);
+}
+
+
 
 form input {
       padding: 20px;
