--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -2,9 +2,8 @@
     display: flex;
     background-color: rgba(255, 255, 255, 0.747);
     border-radius: 15px;
-    //box-shadow: 0px 40px 65px -5px rgba(0, 0, 0, 0.137);
+    box-shadow: 0px 0px 100px 10px rgba(0, 0, 0, 0.158);
 }
-
 
 
 form input {
@@ -42,6 +41,7 @@ form button {
         transition: all .2s ease;
     }
     
+
 form button:hover {
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.397);
@@ -53,7 +53,7 @@ form button:hover {
    --ggs: 1.3;
     display: inline-block;
     
-    color: rgba(173, 108, 108, 0.795);
+    color: rgba(0, 0, 0, 0.678);
     vertical-align: middle;
 
 }
